--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
           <div class="flex justify-center items-center">
             <img
-              src="assets/produk2.jpg"
+              src="assets/Paket.In.png"
               alt="Ilustrasi Mesin Kios Paket.in"
               class="max-w-xs md:max-w-sm lg:max-w-md drop-shadow-2xl"
             />
